crates/walrus-codegen/snapshots/assign_var.snap
---
source: crates/walrus-codegen/src/tests.rs
expression: module

---
; ModuleID = 'module'
source_filename = "module"

define i32 @main() {
main.entry:
  %x.alloca = alloca i32, align 4
  store i32 5, i32* %x.alloca, align 4
  store i32 6, i32* %x.alloca, align 4
  %x = load i32, i32* %x.alloca, align 4
  ret i32 %x
}

