crates/walrus-codegen/snapshots/binop_or.snap
---
source: crates/walrus-codegen/src/codegen.rs
expression: llvm_module.print_to_string().to_string()

---
; ModuleID = 'module'
source_filename = "module"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"

define i1 @main(i8* %main.env) {
main.entry:
  br i1 false, label %or.then, label %or.else

or.then:                                          ; preds = %main.entry
  br label %or.end

or.else:                                          ; preds = %main.entry
  br label %or.end

or.end:                                           ; preds = %or.else, %or.then
  %or.merge = phi i1 [ false, %or.then ], [ true, %or.else ]
  ret i1 %or.merge
}

