crates/walrus-codegen/snapshots/empty_fn.snap
---
source: crates/walrus-codegen/src/codegen.rs
expression: llvm_module.print_to_string().to_string()

---
; ModuleID = 'module'
source_filename = "module"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"

define {} @main(i8* %main.env) {
main.entry:
  ret <{}> zeroinitializer
}

