crates/walrus-codegen/snapshots/float_add.snap
---
source: crates/walrus-codegen/src/codegen.rs
expression: llvm_module.print_to_string().to_string()

---
; ModuleID = 'module'
source_filename = "module"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"

define void @builtins.exit.wrapper(i8* %env, i32 %status) {
  call void @exit(i32 %status)
  unreachable
}

declare void @exit(i32)

define float @main(i8* %main.env) {
main.entry:
  %x.alloca = alloca float, align 4
  store float 1.000000e+00, float* %x.alloca, align 4
  %y.alloca = alloca float, align 4
  store float 1.000000e+00, float* %y.alloca, align 4
  %x = load float, float* %x.alloca, align 4
  %y = load float, float* %y.alloca, align 4
  %0 = fadd float %x, %y
  ret float %0
}

; Function Attrs: nounwind
declare void @llvm.stackprotector(i8*, i8**) #0

attributes #0 = { nounwind }

